Analysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMA
    POWER

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_instrucciones
Rule 2     lista_instrucciones -> instruccion lista_instrucciones
Rule 3     lista_instrucciones -> instruccion
Rule 4     instruccion -> IF LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif else_opcional
Rule 5     lista_elif -> ELIF LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif
Rule 6     lista_elif -> empty
Rule 7     else_opcional -> ELSE LBRACE lista_instrucciones RBRACE
Rule 8     else_opcional -> empty
Rule 9     instruccion -> WHILE LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
Rule 10    instruccion -> FOR LPAREN declara_o_asigna SEMICOLON condition SEMICOLON incremento RPAREN LBRACE lista_instrucciones RBRACE
Rule 11    instruccion -> FOR LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
Rule 12    declara_o_asigna -> INT asignacion_base
Rule 13    declara_o_asigna -> FLOAT asignacion_base
Rule 14    declara_o_asigna -> STRING asignacion_base
Rule 15    declara_o_asigna -> asignacion_base
Rule 16    instruccion -> BREAK SEMICOLON
Rule 17    instruccion -> CONTINUE SEMICOLON
Rule 18    instruccion -> RETURN expression SEMICOLON
Rule 19    instruccion -> RETURN SEMICOLON
Rule 20    asignacion_base -> ID EQUAL expression
Rule 21    instruccion -> asignacion_base SEMICOLON
Rule 22    instruccion -> INT ID SEMICOLON
Rule 23    instruccion -> FLOAT ID SEMICOLON
Rule 24    instruccion -> STRING ID SEMICOLON
Rule 25    instruccion -> INT asignacion_base SEMICOLON
Rule 26    instruccion -> FLOAT asignacion_base SEMICOLON
Rule 27    instruccion -> STRING asignacion_base SEMICOLON
Rule 28    incremento -> ID INCREMENTO SEMICOLON
Rule 29    incremento -> ID PLUS PLUS SEMICOLON
Rule 30    decremento -> ID MINUS MINUS SEMICOLON
Rule 31    decremento -> ID DECREMENTO SEMICOLON
Rule 32    instruccion -> decremento
Rule 33    instruccion -> expression SEMICOLON
Rule 34    condition -> expression GREATER expression
Rule 35    condition -> expression LESS expression
Rule 36    condition -> expression ISEQUAL expression
Rule 37    condition -> expression DISTINCT expression
Rule 38    expression -> expression PLUS term
Rule 39    expression -> expression MINUS term
Rule 40    expression -> term
Rule 41    term -> term TIMES factor
Rule 42    term -> term DIVIDE factor
Rule 43    term -> factor
Rule 44    factor -> ID
Rule 45    factor -> INT
Rule 46    factor -> STRING
Rule 47    factor -> LPAREN expression RPAREN
Rule 48    instruccion -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 49    empty -> <empty>

Terminals, with rules where they appear

BREAK                : 16
COLON                : 
COMMA                : 
CONTINUE             : 17
DECREMENTO           : 31
DISTINCT             : 37
DIVIDE               : 42
ELIF                 : 5
ELSE                 : 7
EQUAL                : 20
FLOAT                : 13 23 26
FOR                  : 10 11
GREATER              : 34
ID                   : 20 22 23 24 28 29 30 31 44
IF                   : 4
INCREMENTO           : 28
INT                  : 12 22 25 45
ISEQUAL              : 36
LBRACE               : 4 5 7 9 10 11
LESS                 : 35
LPAREN               : 4 5 9 10 11 47 48
MINUS                : 30 30 39
PLUS                 : 29 29 38
POWER                : 
PRINT                : 48
RBRACE               : 4 5 7 9 10 11
RETURN               : 18 19
RPAREN               : 4 5 9 10 11 47 48
SEMICOLON            : 10 10 16 17 18 19 21 22 23 24 25 26 27 28 29 30 31 33 48
STRING               : 14 24 27 46
TIMES                : 41
WHILE                : 9
error                : 

Nonterminals, with rules where they appear

asignacion_base      : 12 13 14 15 21 25 26 27
condition            : 4 5 9 10 11
declara_o_asigna     : 10
decremento           : 32
else_opcional        : 4
empty                : 6 8
expression           : 18 20 33 34 34 35 35 36 36 37 37 38 39 47 48
factor               : 41 42 43
incremento           : 10
instruccion          : 2 3
lista_elif           : 4 5
lista_instrucciones  : 1 2 4 5 7 9 10 11
programa             : 0
term                 : 38 39 40 41 42

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_instrucciones
    (2) lista_instrucciones -> . instruccion lista_instrucciones
    (3) lista_instrucciones -> . instruccion
    (4) instruccion -> . IF LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif else_opcional
    (9) instruccion -> . WHILE LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
    (10) instruccion -> . FOR LPAREN declara_o_asigna SEMICOLON condition SEMICOLON incremento RPAREN LBRACE lista_instrucciones RBRACE
    (11) instruccion -> . FOR LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
    (16) instruccion -> . BREAK SEMICOLON
    (17) instruccion -> . CONTINUE SEMICOLON
    (18) instruccion -> . RETURN expression SEMICOLON
    (19) instruccion -> . RETURN SEMICOLON
    (21) instruccion -> . asignacion_base SEMICOLON
    (22) instruccion -> . INT ID SEMICOLON
    (23) instruccion -> . FLOAT ID SEMICOLON
    (24) instruccion -> . STRING ID SEMICOLON
    (25) instruccion -> . INT asignacion_base SEMICOLON
    (26) instruccion -> . FLOAT asignacion_base SEMICOLON
    (27) instruccion -> . STRING asignacion_base SEMICOLON
    (32) instruccion -> . decremento
    (33) instruccion -> . expression SEMICOLON
    (48) instruccion -> . PRINT LPAREN expression RPAREN SEMICOLON
    (20) asignacion_base -> . ID EQUAL expression
    (30) decremento -> . ID MINUS MINUS SEMICOLON
    (31) decremento -> . ID DECREMENTO SEMICOLON
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    IF              shift and go to state 4
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    RETURN          shift and go to state 10
    INT             shift and go to state 13
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 14
    LPAREN          shift and go to state 5

    programa                       shift and go to state 1
    lista_instrucciones            shift and go to state 2
    instruccion                    shift and go to state 3
    expression                     shift and go to state 11
    asignacion_base                shift and go to state 12
    decremento                     shift and go to state 17
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_instrucciones .

    $end            reduce using rule 1 (programa -> lista_instrucciones .)


state 3

    (2) lista_instrucciones -> instruccion . lista_instrucciones
    (3) lista_instrucciones -> instruccion .
    (2) lista_instrucciones -> . instruccion lista_instrucciones
    (3) lista_instrucciones -> . instruccion
    (4) instruccion -> . IF LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif else_opcional
    (9) instruccion -> . WHILE LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
    (10) instruccion -> . FOR LPAREN declara_o_asigna SEMICOLON condition SEMICOLON incremento RPAREN LBRACE lista_instrucciones RBRACE
    (11) instruccion -> . FOR LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE
    (16) instruccion -> . BREAK SEMICOLON
    (17) instruccion -> . CONTINUE SEMICOLON
    (18) instruccion -> . RETURN expression SEMICOLON
    (19) instruccion -> . RETURN SEMICOLON
    (21) instruccion -> . asignacion_base SEMICOLON
    (22) instruccion -> . INT ID SEMICOLON
    (23) instruccion -> . FLOAT ID SEMICOLON
    (24) instruccion -> . STRING ID SEMICOLON
    (25) instruccion -> . INT asignacion_base SEMICOLON
    (26) instruccion -> . FLOAT asignacion_base SEMICOLON
    (27) instruccion -> . STRING asignacion_base SEMICOLON
    (32) instruccion -> . decremento
    (33) instruccion -> . expression SEMICOLON
    (48) instruccion -> . PRINT LPAREN expression RPAREN SEMICOLON
    (20) asignacion_base -> . ID EQUAL expression
    (30) decremento -> . ID MINUS MINUS SEMICOLON
    (31) decremento -> . ID DECREMENTO SEMICOLON
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    $end            reduce using rule 3 (lista_instrucciones -> instruccion .)
    RBRACE          reduce using rule 3 (lista_instrucciones -> instruccion .)
    IF              shift and go to state 4
    WHILE           shift and go to state 6
    FOR             shift and go to state 7
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    RETURN          shift and go to state 10
    INT             shift and go to state 13
    FLOAT           shift and go to state 15
    STRING          shift and go to state 16
    PRINT           shift and go to state 18
    ID              shift and go to state 14
    LPAREN          shift and go to state 5

    instruccion                    shift and go to state 3
    lista_instrucciones            shift and go to state 21
    expression                     shift and go to state 11
    asignacion_base                shift and go to state 12
    decremento                     shift and go to state 17
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 4

    (4) instruccion -> IF . LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif else_opcional

    LPAREN          shift and go to state 22


state 5

    (47) factor -> LPAREN . expression RPAREN
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    INT             shift and go to state 25
    STRING          shift and go to state 26
    LPAREN          shift and go to state 5

    expression                     shift and go to state 23
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 6

    (9) instruccion -> WHILE . LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE

    LPAREN          shift and go to state 27


state 7

    (10) instruccion -> FOR . LPAREN declara_o_asigna SEMICOLON condition SEMICOLON incremento RPAREN LBRACE lista_instrucciones RBRACE
    (11) instruccion -> FOR . LPAREN condition RPAREN LBRACE lista_instrucciones RBRACE

    LPAREN          shift and go to state 28


state 8

    (16) instruccion -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 29


state 9

    (17) instruccion -> CONTINUE . SEMICOLON

    SEMICOLON       shift and go to state 30


state 10

    (18) instruccion -> RETURN . expression SEMICOLON
    (19) instruccion -> RETURN . SEMICOLON
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    SEMICOLON       shift and go to state 32
    ID              shift and go to state 24
    INT             shift and go to state 25
    STRING          shift and go to state 26
    LPAREN          shift and go to state 5

    expression                     shift and go to state 31
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 11

    (33) instruccion -> expression . SEMICOLON
    (38) expression -> expression . PLUS term
    (39) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 33
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35


state 12

    (21) instruccion -> asignacion_base . SEMICOLON

    SEMICOLON       shift and go to state 36


state 13

    (22) instruccion -> INT . ID SEMICOLON
    (25) instruccion -> INT . asignacion_base SEMICOLON
    (45) factor -> INT .
    (20) asignacion_base -> . ID EQUAL expression

    ID              shift and go to state 37
    TIMES           reduce using rule 45 (factor -> INT .)
    DIVIDE          reduce using rule 45 (factor -> INT .)
    SEMICOLON       reduce using rule 45 (factor -> INT .)
    PLUS            reduce using rule 45 (factor -> INT .)
    MINUS           reduce using rule 45 (factor -> INT .)

    asignacion_base                shift and go to state 38

state 14

    (20) asignacion_base -> ID . EQUAL expression
    (30) decremento -> ID . MINUS MINUS SEMICOLON
    (31) decremento -> ID . DECREMENTO SEMICOLON
    (44) factor -> ID .

  ! shift/reduce conflict for MINUS resolved as shift
    EQUAL           shift and go to state 39
    MINUS           shift and go to state 40
    DECREMENTO      shift and go to state 41
    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    SEMICOLON       reduce using rule 44 (factor -> ID .)
    PLUS            reduce using rule 44 (factor -> ID .)

  ! MINUS           [ reduce using rule 44 (factor -> ID .) ]


state 15

    (23) instruccion -> FLOAT . ID SEMICOLON
    (26) instruccion -> FLOAT . asignacion_base SEMICOLON
    (20) asignacion_base -> . ID EQUAL expression

    ID              shift and go to state 42

    asignacion_base                shift and go to state 43

state 16

    (24) instruccion -> STRING . ID SEMICOLON
    (27) instruccion -> STRING . asignacion_base SEMICOLON
    (46) factor -> STRING .
    (20) asignacion_base -> . ID EQUAL expression

    ID              shift and go to state 44
    TIMES           reduce using rule 46 (factor -> STRING .)
    DIVIDE          reduce using rule 46 (factor -> STRING .)
    SEMICOLON       reduce using rule 46 (factor -> STRING .)
    PLUS            reduce using rule 46 (factor -> STRING .)
    MINUS           reduce using rule 46 (factor -> STRING .)

    asignacion_base                shift and go to state 45

state 17

    (32) instruccion -> decremento .

    IF              reduce using rule 32 (instruccion -> decremento .)
    WHILE           reduce using rule 32 (instruccion -> decremento .)
    FOR             reduce using rule 32 (instruccion -> decremento .)
    BREAK           reduce using rule 32 (instruccion -> decremento .)
    CONTINUE        reduce using rule 32 (instruccion -> decremento .)
    RETURN          reduce using rule 32 (instruccion -> decremento .)
    INT             reduce using rule 32 (instruccion -> decremento .)
    FLOAT           reduce using rule 32 (instruccion -> decremento .)
    STRING          reduce using rule 32 (instruccion -> decremento .)
    PRINT           reduce using rule 32 (instruccion -> decremento .)
    ID              reduce using rule 32 (instruccion -> decremento .)
    LPAREN          reduce using rule 32 (instruccion -> decremento .)
    $end            reduce using rule 32 (instruccion -> decremento .)
    RBRACE          reduce using rule 32 (instruccion -> decremento .)


state 18

    (48) instruccion -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 46


state 19

    (40) expression -> term .
    (41) term -> term . TIMES factor
    (42) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 40 (expression -> term .)
    PLUS            reduce using rule 40 (expression -> term .)
    MINUS           reduce using rule 40 (expression -> term .)
    RPAREN          reduce using rule 40 (expression -> term .)
    GREATER         reduce using rule 40 (expression -> term .)
    LESS            reduce using rule 40 (expression -> term .)
    ISEQUAL         reduce using rule 40 (expression -> term .)
    DISTINCT        reduce using rule 40 (expression -> term .)
    TIMES           shift and go to state 47
    DIVIDE          shift and go to state 48


state 20

    (43) term -> factor .

    TIMES           reduce using rule 43 (term -> factor .)
    DIVIDE          reduce using rule 43 (term -> factor .)
    SEMICOLON       reduce using rule 43 (term -> factor .)
    PLUS            reduce using rule 43 (term -> factor .)
    MINUS           reduce using rule 43 (term -> factor .)
    RPAREN          reduce using rule 43 (term -> factor .)
    GREATER         reduce using rule 43 (term -> factor .)
    LESS            reduce using rule 43 (term -> factor .)
    ISEQUAL         reduce using rule 43 (term -> factor .)
    DISTINCT        reduce using rule 43 (term -> factor .)


state 21

    (2) lista_instrucciones -> instruccion lista_instrucciones .

    $end            reduce using rule 2 (lista_instrucciones -> instruccion lista_instrucciones .)
    RBRACE          reduce using rule 2 (lista_instrucciones -> instruccion lista_instrucciones .)


state 22

    (4) instruccion -> IF LPAREN . condition RPAREN LBRACE lista_instrucciones RBRACE lista_elif else_opcional
    (34) condition -> . expression GREATER expression
    (35) condition -> . expression LESS expression
    (36) condition -> . expression ISEQUAL expression
    (37) condition -> . expression DISTINCT expression
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    INT             shift and go to state 25
    STRING          shift and go to state 26
    LPAREN          shift and go to state 5

    condition                      shift and go to state 49
    expression                     shift and go to state 50
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 23

    (47) factor -> LPAREN expression . RPAREN
    (38) expression -> expression . PLUS term
    (39) expression -> expression . MINUS term

    RPAREN          shift and go to state 51
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35


state 24

    (44) factor -> ID .

    TIMES           reduce using rule 44 (factor -> ID .)
    DIVIDE          reduce using rule 44 (factor -> ID .)
    RPAREN          reduce using rule 44 (factor -> ID .)
    PLUS            reduce using rule 44 (factor -> ID .)
    MINUS           reduce using rule 44 (factor -> ID .)
    SEMICOLON       reduce using rule 44 (factor -> ID .)
    GREATER         reduce using rule 44 (factor -> ID .)
    LESS            reduce using rule 44 (factor -> ID .)
    ISEQUAL         reduce using rule 44 (factor -> ID .)
    DISTINCT        reduce using rule 44 (factor -> ID .)


state 25

    (45) factor -> INT .

    TIMES           reduce using rule 45 (factor -> INT .)
    DIVIDE          reduce using rule 45 (factor -> INT .)
    RPAREN          reduce using rule 45 (factor -> INT .)
    PLUS            reduce using rule 45 (factor -> INT .)
    MINUS           reduce using rule 45 (factor -> INT .)
    SEMICOLON       reduce using rule 45 (factor -> INT .)
    GREATER         reduce using rule 45 (factor -> INT .)
    LESS            reduce using rule 45 (factor -> INT .)
    ISEQUAL         reduce using rule 45 (factor -> INT .)
    DISTINCT        reduce using rule 45 (factor -> INT .)


state 26

    (46) factor -> STRING .

    TIMES           reduce using rule 46 (factor -> STRING .)
    DIVIDE          reduce using rule 46 (factor -> STRING .)
    RPAREN          reduce using rule 46 (factor -> STRING .)
    PLUS            reduce using rule 46 (factor -> STRING .)
    MINUS           reduce using rule 46 (factor -> STRING .)
    SEMICOLON       reduce using rule 46 (factor -> STRING .)
    GREATER         reduce using rule 46 (factor -> STRING .)
    LESS            reduce using rule 46 (factor -> STRING .)
    ISEQUAL         reduce using rule 46 (factor -> STRING .)
    DISTINCT        reduce using rule 46 (factor -> STRING .)


state 27

    (9) instruccion -> WHILE LPAREN . condition RPAREN LBRACE lista_instrucciones RBRACE
    (34) condition -> . expression GREATER expression
    (35) condition -> . expression LESS expression
    (36) condition -> . expression ISEQUAL expression
    (37) condition -> . expression DISTINCT expression
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 24
    INT             shift and go to state 25
    STRING          shift and go to state 26
    LPAREN          shift and go to state 5

    condition                      shift and go to state 52
    expression                     shift and go to state 50
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 28

    (10) instruccion -> FOR LPAREN . declara_o_asigna SEMICOLON condition SEMICOLON incremento RPAREN LBRACE lista_instrucciones RBRACE
    (11) instruccion -> FOR LPAREN . condition RPAREN LBRACE lista_instrucciones RBRACE
    (12) declara_o_asigna -> . INT asignacion_base
    (13) declara_o_asigna -> . FLOAT asignacion_base
    (14) declara_o_asigna -> . STRING asignacion_base
    (15) declara_o_asigna -> . asignacion_base
    (34) condition -> . expression GREATER expression
    (35) condition -> . expression LESS expression
    (36) condition -> . expression ISEQUAL expression
    (37) condition -> . expression DISTINCT expression
    (20) asignacion_base -> . ID EQUAL expression
    (38) expression -> . expression PLUS term
    (39) expression -> . expression MINUS term
    (40) expression -> . term
    (41) term -> . term TIMES factor
    (42) term -> . term DIVIDE factor
    (43) term -> . factor
    (44) factor -> . ID
    (45) factor -> . INT
    (46) factor -> . STRING
    (47) factor -> . LPAREN expression RPAREN

    INT             shift and go to state 55
    FLOAT           shift and go to state 57
    STRING          shift and go to state 58
    ID              shift and go to state 59
    LPAREN          shift and go to state 5

    declara_o_asigna               shift and go to state 53
    condition                      shift and go to state 54
    asignacion_base                shift and go to state 56
    expression                     shift and go to state 50
    term                           shift and go to state 19
    factor                         shift and go to state 20

state 29

    (16) instruccion -> BREAK SEMICOLON .

    IF              reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    WHILE           reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    FOR             reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    BREAK           reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    CONTINUE        reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    RETURN          reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    INT             reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    FLOAT           reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    STRING          reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    PRINT           reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    ID              reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    LPAREN          reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    $end            reduce using rule 16 (instruccion -> BREAK SEMICOLON .)
    RBRACE          reduce using rule 16 (instruccion -> BREAK SEMICOLON .)


state 30

    (17) instruccion -> CONTINUE SEMICOLON .

    IF              reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    WHILE           reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    FOR             reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    BREAK           reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    CONTINUE        reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    RETURN          reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    INT             reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    FLOAT           reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    STRING          reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    PRINT           reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    ID              reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    LPAREN          reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    $end            reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)
    RBRACE          reduce using rule 17 (instruccion -> CONTINUE SEMICOLON .)


state 31

    (18) instruccion -> RETURN expression . SEMICOLON
    (38) expression -> expression . PLUS term
    (39) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 60
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35


state 32

    (19) instruccion -> RETURN SEMICOLON .
